--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,13 +27,13 @@
     --body-font: 'Poppins', sans-serif;
 
     /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
-    --big-font-size: 2rem;
-    --h1-font-size: 1.5rem;
-    --h2-font-size: 1.25rem;
-    --h3-font-size: 1.125rem;
-    --normal-font-size: .938rem;
-    --small-font-size: .813rem;
-    --smaller-font-size: .75rem;
+    --big-font-size: 2.25rem;
+    --h1-font-size: 1.85rem;
+    --h2-font-size: 1.5rem;
+    --h3-font-size: 1.35rem;
+    --normal-font-size: 1.20rem;
+    --small-font-size: 1.112rem;
+    --smaller-font-size: 1.0rem;
 
     /*========== Font weight ==========*/
     --font-medium: 500;
