--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -663,7 +663,7 @@ img {
 .services__content {
     position: relative;
     background-color: var(--container-color);
-    padding: 3.5rem .5rem 1.25rem 1.5rem;
+    padding: 3.5rem .5rem 1.25rem .1rem;
     border-radius: .25rem;
     box-shadow: 0 2px 4px rgba(0,0,0,.15);
     transition: .3s;
