contact send button style modification

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1397,3 +1397,8 @@ img {
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+.send-button{
+    font-size: 16px;
+    font-weight: 500;
+}
